<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <TextView
        android:id="@+id/textRekam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rekam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_nav"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/rekamOff"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/record_toggle"
        app:layout_constraintBottom_toTopOf="@+id/textRekam"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_mic_24_off" />

    <ToggleButton
        android:id="@+id/rekamOn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/baseline_mic_24"
        app:layout_constraintBottom_toTopOf="@+id/textRekam"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_mic_24" />

    <Button
        android:id="@+id/rekamMulai"
        android:layout_width="153dp"
        android:layout_height="55dp"

        android:layout_marginStart="36dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:text="@string/rekamMulai"
        app:layout_constraintEnd_toStartOf="@+id/rekamMati"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRekam" />

    <Button
        android:id="@+id/rekamMati"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"

        android:text="@string/rekamStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRekam" />

    <TextView
        android:id="@+id/lagiRekam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="100dp"
        android:text="@string/lagiRekam"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/rekamMati"
        app:layout_constraintHorizontal_bias="0.558"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/rekamMulai" />


</androidx.constraintlayout.widget.ConstraintLayout>